<resources>
    <string name="app_name">Hotel Bli!</string>
    <string name="location">Location</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="review">Review</string>
    <string name="facilities">Facilities</string>
    <string name="login_to_your_existing_account">Login to your\nexisting account</string>
    <string name="please_fill_the_form_to_login">Please fill the form to login.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="account_registration">Account\nRegistration</string>
    <string name="please_fill_the_form_to_register">Please fill the form to register.</string>
    <string name="register">Register</string>
    <string name="error_email_invalid">Please enter a valid email</string>
    <string name="error_pass_length">Minimal length is %1$d character</string>
    <string name="error_pass_confirmation">Password doesn\'t match</string>
    <string name="error_required">Field must not be empty</string>
    <string name="username">Username</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="register_success">Register success.</string>
    <string name="search_hint">Search hotel</string>
    <string name="not_logged_in">You’re not logged in. Login first to enjoy interesting promotions!</string>
    <string name="login_here">Login here</string>
    <string name="menu">Menu</string>
    <string name="menu_description">Menu</string>
    <string name="hotel_recommendations">Hotel Recommendations</string>
    <string name="top_rated">Top rated</string>
    <string name="near_your_location">Near your location</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_order">Order</string>
    <string name="navbar_explore">Explore</string>
    <string name="navbar_notification">Notification</string>
    <string name="navbar_profile">Profile</string>
    <string name="hotel_photo">Hotel photo</string>
    <string name="check_it_out">Check it out!</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="change">Change language</string>
    <string name="chat_button">Chat button</string>
    <string name="bookmark_button">Bookmark button</string>
    <string name="prefer_with_family">Prefer with family?</string>
    <string name="hobbies">Hobbies</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="sign_out"> Logout</string>
    <string name="rating">(%1$s / 5.0)</string>
    <string name="price">Rp%1$s.000,00</string>
    <string name="retry">Try again</string>
    <string name="free_refund">Free Refund</string>
    <string name="start">Start from</string>
    <string name="night">/night</string>
    <string name="cancel">Cancel</string>
    <string name="profile_customization">Profile Customization</string>
    <string name="we_provide_hotel">We will provide your hotel preference based on this information.</string>
    <string name="required">*Required</string>
    <string name="full_name_req">Full name*</string>
    <string name="identity_number_req">Identity number*</string>
    <string name="birth_date_req">Birth date (DD/MM/YYYY)*</string>
    <string name="prefer_to_go_with_your_family_req">Prefer to go with your family?*</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_hobbies_req">Select your hobbies below (minimum 1)*:</string>
    <string name="selfie">Selfie</string>
    <string name="hiking">Hiking</string>
    <string name="eating">Eating</string>
    <string name="travelling">Travelling</string>
    <string name="shopping">Shopping</string>
    <string name="swimming">Swimming</string>
    <string name="let_us_know_if_you_have_any_special_needs">Let us know if you have any special needs.</string>
    <string name="i_cant_move_freely">I can’t move freely</string>
    <string name="i_cant_speak_easily">I can’t speak easily</string>
    <string name="i_cant_hear_properly">I can’t hear properly</string>
    <string name="i_cant_see_clearly">I can’t see clearly</string>
    <string name="save">Save</string>
    <string name="profile_customized_successfully">Profile changed successfully</string>
    <string name="special_needs">Special needs</string>
    <string name="customize_your_profile">Customize Your Profile</string>
    <string name="trending">Trending</string>
    <string name="distance">%1$.1fkm away</string>
    <string name="rating_icon">rating icon</string>
    <string name="location_icon">location icon</string>
    <string name="all_reviews">check all reviews</string>
    <string name="reviews_icon">reviews icon</string>
    <string name="facilities_icon">facilities icon</string>
    <string name="breakfast">breakfast</string>
    <string name="wifi">wifi</string>
    <string name="parking">parking</string>
    <string name="smoking_area">smoking area</string>
    <string name="air_conditioner">air conditioner</string>
    <string name="wheelchair_access">wheelchair access</string>
    <string name="average_bed_size">average bed size</string>
    <string name="staff_vaccinated">staff vaccinated</string>
    <string name="child_area">child area</string>
    <string name="location_detail">location detail</string>
    <string name="error_connection">Check your internet connection</string>
    <string name="edit_profile">Complete profile</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="it_looks_like">It looks like you haven\'t completed your profile. Completing your profile help us to know you better.</string>
    <string name="maybe_later">Maybe later</string>
    <string name="check_our">Check our new hotel recommendation feature to find your most desirable hotel.</string>
    <string name="just_for_you">Just for you!</string>
    <string name="we_will_give">We will give our best recommendation based on your review. Please provide at least 10 reviews to unlock this feature.</string>
    <string name="for_you_page">For you page</string>
    <string name="for_you">For You</string>
    <string name="hotel_based_on_loves">Hotel recommendation based on things you loves in your adventure.</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_cancel">Cancel</string>
    <string name="logout_ok">Logout</string>
    <string name="enter_your_comment">Enter your review</string>
    <string name="post">Post</string>
    <string name="morning">Good morning,</string>
    <string name="afternoon">Good afternoon,</string>
    <string name="evening">Good evening,</string>
    <string name="review_counter">Current review: %1$d</string>
    <string name="name">%1$s.</string>
    <string name="post_a_review">Post a review</string>
    <string name="suitable_for_you">Suitable for you</string>
    <string name="no_result_found">No result found.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hotel_similarities">Similar Hotels</string>
    <string name="indonesian">Indonesian</string>
    <string name="english_us">English US</string>
    <string name="toast_rating">Rating can not be empty</string>
    <string name="toast_review">Review can not be empty</string>
    <string name="toast_success">Submit review success</string>
    <string name="toast_error">Submit review error</string>
    <string name="booking">Booking</string>
</resources>