<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/navbar_home" />

    <item
        android:id="@+id/order"
        android:enabled="true"
        android:icon="@drawable/ic_order"
        android:title="@string/navbar_order" />

    <item
        android:id="@+id/explore"
        android:enabled="true"
        android:icon="@drawable/ic_explore"
        android:title="@string/navbar_explore" />

    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/navbar_notification" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/navbar_profile" />

</menu>