<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/search_bar"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btnBookmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:text="@string/search_hint"
            android:textAppearance="@style/TextAppearance.HotelRanking.BodyLarge"
            android:textColor="?attr/colorOnSurfaceVariant" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/ic_search"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/btnBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/bookmark_button"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintBottom_toBottomOf="@+id/searchBar"
        app:layout_constraintEnd_toStartOf="@+id/btnChat"
        app:layout_constraintTop_toTopOf="@+id/searchBar"
        tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/btnChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/chat_button"
        android:src="@drawable/ic_chat"
        app:layout_constraintBottom_toBottomOf="@+id/btnBookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBookmark"
        tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        style="@style/Widget.App.BottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_home_guest"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:navGraph="@navigation/guest_navigation"
        tools:ignore="FragmentTagUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>